--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -139,7 +139,7 @@
     <section class="redes">
       <h2>Explora nuestras Redes Sociales</h2>
 
-      <div class="redes-img">
+      <section class="redes-img">
         <!-- Imagen de Redes 1 + Imagen del logo de Instagram -->
         <figure class="img-deco-index-redes">
           <picture>
@@ -274,7 +274,7 @@
 
           <i class="fab fa-instagram"></i>
         </figure>
-      </div>
+      </section>
 
       <!-- Botón para mostrar más Imagenes (Sin funcionalidad, por ahora) -->
       <a class="boton-pred" href="#">Mostrar Más</a>
