--- a/Fuente/html/carta.html
+++ b/Fuente/html/carta.html
@@ -65,26 +65,17 @@
     </section>
 
     <nav class="menu-carta-principal">
-      <ul>
-        <li><a class="boton-pred" >Entrantes</a></li>
-        <li><a class="boton-pred" >Sopa</a></li>
-        <li><a class="boton-pred" >Ensaladas</a></li>
-        <li><a class="boton-pred" href="carta/pasta.html">Pasta</a></li>
-        <li><a class="boton-pred" >Pizza</a></li>
-        <li><a class="boton-pred" >Vinos</a></li>
-      </ul>
-
       <!-- Opción Menu Entrantes -->
-      <figure class="img-prod-carta">
+      <figure class="img-prod-carta-menu">
         <picture>
           <source 
             srcset="
-              ../media/img/img-producto/webp/producto-Carta-1-320px.webp 320w,
-              ../media/img/img-producto/webp/producto-Carta-1-640px.webp 640w,
-              ../media/img/img-producto/webp/producto-Carta-1-960px.webp 960w,
-              ../media/img/img-producto/webp/producto-Carta-1-1600px.webp 1600w,
-              ../media/img/img-producto/webp/producto-Carta-1-2240px.webp 2240w,
-              ../media/img/img-producto/webp/producto-Carta-1-3200px.webp 3200w
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-Entrante-1-3200px.webp 3200w
             "
             sizes=" (max-width: 320px) 320px, 
                     (max-width: 640px) 640px, 
@@ -96,12 +87,12 @@
 
           <source 
             srcset="
-              ../media/img/img-producto/jpg/producto-Carta-1-320px.jpg 320w,
-              ../media/img/img-producto/jpg/producto-Carta-1-640px.jpg 640w,
-              ../media/img/img-producto/jpg/producto-Carta-1-960px.jpg 960w,
-              ../media/img/img-producto/jpg/producto-Carta-1-1600px.jpg 1600w,
-              ../media/img/img-producto/jpg/producto-Carta-1-2240px.jpg 2240w,
-              ../media/img/img-producto/jpg/producto-Carta-1-3200px.jpg 3200w
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-Entrante-1-3200px.jpg 3200w
             "
             sizes=" (max-width: 320px) 320px, 
                     (max-width: 640px) 640px, 
@@ -110,15 +101,24 @@
                     (max-width: 2240px) 2240px, 
                     3200px"
             type="image/jpg">
-  
+ 
+          <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Entrante-1-3200px.webp" alt="Imagen de Producto">
+        </picture>
+
+        <a class="enlace-carta">Entrantes</a>
+      </figure>
+
+      <!-- Opción Menu Vinos -->
+      <figure class="img-prod-carta-menu">
+        <picture>
           <source 
             srcset="
-              ../media/img/img-producto/png/producto-Carta-1-320px.png 320w,
-              ../media/img/img-producto/png/producto-Carta-1-640px.png 640w,
-              ../media/img/img-producto/png/producto-Carta-1-960px.png 960w,
-              ../media/img/img-producto/png/producto-Carta-1-1600px.png 1600w,
-              ../media/img/img-producto/png/producto-Carta-1-2240px.png 2240w,
-              ../media/img/img-producto/png/producto-Carta-1-3200px.png 3200w
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-Vinos-1-3200px.webp 3200w
             "
             sizes=" (max-width: 320px) 320px, 
                     (max-width: 640px) 640px, 
@@ -126,17 +126,72 @@
                     (max-width: 1600px) 1600px, 
                     (max-width: 2240px) 2240px, 
                     3200px"
-            type="image/png">
+            type="image/webp">
+
+          <source 
+            srcset="
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-Vinos-1-3200px.jpg 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
  
-          <img class="img-main" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-1-3200px.webp" alt="Imagen de Producto">
+          <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Vinos-1-3200px.webp" alt="Imagen de Producto">
         </picture>
 
-        <section class="img-desc">
-          <h1>Spaghetti alla Carbonara</h1>
-          <p>Preparado con huevo, queso pecorino 
-            romano, panceta y pimienta negra. 
-            Una receta sencilla y deliciosa.</p>
-        </section>
+        <a class="enlace-carta">Entrantes</a>
+      </figure>
+
+      <!-- Opción Menu Ensaladas -->
+      <figure class="img-prod-carta-menu">
+        <picture>
+          <source 
+            srcset="
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-Ensalada-1-3200px.webp 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/webp">
+
+          <source 
+            srcset="
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-Ensalada-1-3200px.jpg 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
+ 
+          <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Ensalada-1-3200px.webp" alt="Imagen de Producto">
+        </picture>
+
+        <a class="enlace-carta">Entrantes</a>
       </figure>
     </nav>
 
