Imagenes Adaptables Solucionado

--- a/Fuente/index-imgAdaptables.html
+++ b/Fuente/index-imgAdaptables.html
@@ -54,10 +54,10 @@
     <!-- Sección Principal con Hero-Image, titulo, subtítulo y botones -->
     <section class="introduccion">
       <figure class="img-header-pred img-index"></figure>
-      <div class="intro-texto">
+      <article class="intro-texto">
         <h1>CASA DI PEPE</h1>
         <h3>EL CORAZÓN DE LA TOSCANA</h3>
-      </div>
+      </article>
       <nav class="intro-botones">
         <a href="#" class="boton-pred">LLamanos</a>
         <a href="#" class="boton-pred">Escribenos</a>
@@ -102,10 +102,10 @@
     <section class="redes">
       <h2>Explora nuestras Redes Sociales</h2>
 
-      <div class="redes-img">
+      <section class="redes-img">
         <!-- Imagen de Redes 1 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes">
-          <picture id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-1", "img-decorativa", ["jpg", "webp", "svg"]]'>
+        <figure class="img-deco-index-redes"  id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-1", "img-decorativa", ["jpg", "webp", "svg"]]'>
+          <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceSvg" type="image/svg+xml">              
             <img class="img-main" id="imagen" loading="lazy" alt="Imagen de Decoracion">
@@ -115,8 +115,8 @@
         </figure>
           
           <!-- Imagen de Redes 2 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes">
-          <picture id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-2", "img-decorativa", ["jpg", "webp", "svg"]]'>
+        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-2", "img-decorativa", ["jpg", "webp", "svg"]]'>
+          <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceSvg" type="image/svg+xml">              
             <img class="img-main" id="imagen" loading="lazy" alt="Imagen de Decoracion">
@@ -126,8 +126,8 @@
         </figure>
 
         <!-- Imagen de Redes 3 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes">
-          <picture id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-3", "img-decorativa", ["jpg", "webp", "svg"]]'>
+        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-3", "img-decorativa", ["jpg", "webp", "svg"]]'>
+          <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceSvg" type="image/svg+xml">              
             <img class="img-main" id="imagen" loading="lazy" alt="Imagen de Decoracion">
@@ -135,7 +135,7 @@
 
           <i class="fab fa-instagram"></i>
         </figure>
-      </div>
+      </section>
 
       <!-- Botón para mostrar más Imagenes (Sin funcionalidad, por ahora) -->
       <a class="boton-pred" href="#">Mostrar Más</a>
