--- a/Fuente/html/carta.html
+++ b/Fuente/html/carta.html
@@ -105,7 +105,7 @@
           <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Entrante-1-3200px.webp" alt="Imagen de Producto">
         </picture>
 
-        <a class="enlace-carta">Entrantes</a>
+        <a class="enlace-carta" href="#">Entrantes</a>
       </figure>
 
       <!-- Opción Menu Vinos -->
@@ -148,7 +148,7 @@
           <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Vinos-1-3200px.webp" alt="Imagen de Producto">
         </picture>
 
-        <a class="enlace-carta">Entrantes</a>
+        <a class="enlace-carta" href="#">Entrantes</a>
       </figure>
 
       <!-- Opción Menu Ensaladas -->
@@ -191,7 +191,7 @@
           <img class="img-main-menu" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-Ensalada-1-3200px.webp" alt="Imagen de Producto">
         </picture>
 
-        <a class="enlace-carta">Entrantes</a>
+        <a class="enlace-carta" href="#">Entrantes</a>
       </figure>
     </nav>
 
