--- a/Fuente/html/carta.html
+++ b/Fuente/html/carta.html
@@ -19,7 +19,7 @@
     <nav class="menu">
 
       <!-- Logotipo de la Casas Di Pepe -->
-      <a href="../index.html">
+      <a href="../../index.html">
         <figure id="contenedor-img" data-info='["logo-Header", "logotipo", "1"]'>
           <picture>
             <source id="sourcePng" type="image/png">
