--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="icon" type="image/x-icon" href="media/img/logotipo/logo-Web.ico">
-  <link rel="stylesheet" href="styles/css/index.css">
-  <script src="scripts/js/menu-desplegable.js" defer></script>
-  <script src="scripts/js/img-adaptables.js" defer></script>
+  <link rel="icon" type="image/x-icon" href="Fuente/media/img/logotipo/logo-Web.ico">
+  <link rel="stylesheet" href="Fuente/styles/css/index.css">
+  <script src="Fuente/scripts/js/menu-desplegable.js" defer></script>
+  <script src="Fuente/scripts/js/img-adaptables.js" defer></script>
   <title>Casa di Pepe</title>
 </head>
 
@@ -20,7 +20,7 @@
 
       <!-- Logotipo de la Casas Di Pepe -->
       <a href="index.html">
-        <figure id="contenedor-img" data-info='["logo-Header", "logotipo"]'>
+        <figure id="contenedor-img" data-info='["logo-Header", "logotipo", "0"]'>
           <picture>
             <source id="sourcePng" type="image/png">
             <source id="sourceSvg" type="image/svg+xml">
@@ -31,7 +31,7 @@
 
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
-        <li><a href="html/carta.html"> CARTA </a> </li>
+        <li><a href="Fuente/html/carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
         <li><a href="#"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
@@ -66,7 +66,7 @@
 
     <!-- Sección Sobre Nosotros -->
     <section class="contenido">
-      <figure id="contenedor-img" data-info='["decorativa-PaginaPrincipal", "img-decorativa"]'>
+      <figure id="contenedor-img" data-info='["decorativa-PaginaPrincipal", "img-decorativa", "0"]'>
         <picture>
           <source id="sourceWebp" type="image/webp">
           <source id="sourceJpg" type="image/jpg">
@@ -105,7 +105,7 @@
 
       <section class="redes-img">
         <!-- Imagen de Redes 1 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes"  id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-1", "img-decorativa"]'>
+        <figure class="img-deco-index-redes"  id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-1", "img-decorativa", "0"]'>
           <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceJpg" type="image/jpg">
@@ -117,7 +117,7 @@
         </figure>
 
         <!-- Imagen de Redes 2 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-2", "img-decorativa"]'>
+        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-2", "img-decorativa", "0"]'>
           <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceJpg" type="image/jpg">
@@ -129,7 +129,7 @@
         </figure>
 
         <!-- Imagen de Redes 3 + Imagen del logo de Instagram -->
-        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-3", "img-decorativa"]'>
+        <figure class="img-deco-index-redes" id="contenedor-img" data-info='["decorativa-PaginaPrincipal-RS-3", "img-decorativa", "0"]'>
           <picture>
             <source id="sourceWebp" type="image/webp">
             <source id="sourceJpg" type="image/jpg">
@@ -153,7 +153,7 @@
     <section class="fila-superior">
       
       <!-- Logotipo de Casa Di Pepe V2 -->
-      <figure id="contenedor-img" data-info='["logo-Header-Blanco", "logotipo"]'>
+      <figure id="contenedor-img" data-info='["logo-Header-Blanco", "logotipo", "0"]'>
         <picture>
           <source id="sourcePng" type="image/png">
           <source id="sourceSvg" type="image/svg+xml">
@@ -163,7 +163,7 @@
             
       <!-- Logotipo del Patrocinador -->
       <a href="https://www.guiarepsol.com/">
-        <figure id="contenedor-img" data-info='["logo-Patrocinador", "logotipo"]'>
+        <figure id="contenedor-img" data-info='["logo-Patrocinador", "logotipo", "0"]'>
           <picture>
             <source id="sourcePng" type="image/png">
             <source id="sourceSvg" type="image/svg+xml">
