--- a/Fuente/html/carta/pasta.html
+++ b/Fuente/html/carta/pasta.html
@@ -43,7 +43,7 @@
       </button>
       
       <!-- Boton de Inicio de Sesion -->
-      <a href="#" class="boton-inicio separado">Inicio de sesion</a> 
+      <a href="../inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
 
     </nav>
 
