--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </button>
       
       <!-- Boton de Inicio de Sesion -->
-      <a href="www.google.es" target="_blank" class="boton-inicio separado">Inicio de sesion</a> 
+      <a href="Fuente/html/inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
 
     </nav>
 
