Cambio Ligero Incio de Sesion

--- a/Fuente/html/inicio-sesion.html
+++ b/Fuente/html/inicio-sesion.html
@@ -61,6 +61,10 @@
             <label for="passUser">Contraseña</label>
             <input type="password" id="passUser" name="passUser" placeholder="Escribe tu contraseña" required>
 
+            <section class="formulario-botones">
+              <input  type="submit" value="Registrarse">
+              <input  type="submit" value="Entrar">
+            </section>
         </form>
     </section>
 
