--- a/Fuente/html/inicio-sesion.html
+++ b/Fuente/html/inicio-sesion.html
@@ -33,7 +33,7 @@
       <ul class="enlaces">
         <li><a href="carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
-        <li><a href="#"> RESERVAR MESA </a> </li>
+        <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
 
@@ -43,7 +43,7 @@
       </button>
       
       <!-- Boton de Inicio de Sesion -->
-      <a href="#" class="boton-inicio separado">Inicio de sesion</a> 
+      <a href="" class="boton-inicio separado">Inicio de sesion</a> 
 
     </nav>
 
@@ -56,7 +56,7 @@
 
         <form class="inicio-formulario" action="" method="POST">
             <label for="correoUser">Correo</label>
-            <input type="email" id="correoUser" name="correoUser" placeholder="Escribe tu direccion de correo" required>
+            <input type="email" id="correoUser" name="correoUser" placeholder="Escribe tu correo" required>
 
             <label for="passUser">Contraseña</label>
             <input type="password" id="passUser" name="passUser" placeholder="Escribe tu contraseña" required>
