--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="enlaces">
         <li><a href="Fuente/html/carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
-        <li><a href="#"> RESERVAR MESA </a> </li>
+        <li><a href="Fuente/html/formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
 
