--- a/Fuente/html/formulario-reserva.html
+++ b/Fuente/html/formulario-reserva.html
@@ -77,7 +77,7 @@
             
             <section class="formulario-doble">
                 <label for="numeroPersonas">Personas
-                    <input type="number" id="numeroPersonas" name="numeroPersonas" placeholder="Escribe el numero de personas" required>
+                    <input type="number" id="numeroPersonas" name="numeroPersonas" placeholder="Numero de personas" required>
                 </label>
                 <label for="horas">Horas
                     <select name="horas" id="horas">
