--- a/Fuente/html/carta/pasta.html
+++ b/Fuente/html/carta/pasta.html
@@ -33,7 +33,7 @@
       <ul class="enlaces">
         <li><a href="../carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
-        <li><a href="#"> RESERVAR MESA </a> </li>
+        <li><a href="../formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
 
