Sobre Nosotros y Cuenta 100%

--- a/Fuente/html/carta/pasta.html
+++ b/Fuente/html/carta/pasta.html
@@ -257,7 +257,7 @@
       
       <nav class="menu-footer">
         <ul>
-          <li><a href="#">Sobre Nosotros</a></li>
+          <li><a href="../sobre-nosotros.html">Sobre Nosotros</a></li>
           <li><a href="#">Terminos y Condiciones</a></li>
           <li><a href="#">Detalles de Contacto</a></li>
           <li><a href="#">Politica de Privacidad</a></li>
