--- a/Fuente/html/inicio-sesion.html
+++ b/Fuente/html/inicio-sesion.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../styles/css/inicio-sesion.css">
   <script src="../scripts/js/menu-desplegable.js" defer></script>
   <script src="../scripts/js/img-adaptables.js" defer></script>
+  <script src="../scripts/js/inciar-sesion.js" defer></script>
   <title>Casa di Pepe</title>
 </head>
 
@@ -43,7 +44,7 @@
       </button>
       
       <!-- Boton de Inicio de Sesion -->
-      <a href="" class="boton-inicio separado">Inicio de sesion</a> 
+      <a href="inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
 
     </nav>
 
@@ -131,7 +132,7 @@
       
       <nav class="menu-footer">
         <ul>
-          <li><a href="#">Sobre Nosotros</a></li>
+          <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
           <li><a href="#">Terminos y Condiciones</a></li>
           <li><a href="#">Detalles de Contacto</a></li>
           <li><a href="#">Politica de Privacidad</a></li>
