--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>
           Descubre nuestra historia y cómo cada plato cuenta una parte de ella.
         </p>
-        <a href="#" class="boton-pred">Saber Mas</a> 
+        <a href="Fuente/html/sobre-nosotros.html" class="boton-pred">Saber Mas</a> 
       </article>
     </section>
 
@@ -203,7 +203,7 @@
       
       <nav class="menu-footer">
         <ul>
-          <li><a href="#">Sobre Nosotros</a></li>
+          <li><a href="Fuente/html/sobre-nosotros.html">Sobre Nosotros</a></li>
           <li><a href="#">Terminos y Condiciones</a></li>
           <li><a href="#">Detalles de Contacto</a></li>
           <li><a href="#">Politica de Privacidad</a></li>
