--- a/Fuente/html/sobre-nosotros.html
+++ b/Fuente/html/sobre-nosotros.html
@@ -56,8 +56,7 @@
     <section class="introduccion">
       <figure class="img-header-pred img-sobre-nosotros"></figure>
       <article class="intro-texto">
-        <h1>RESERVAR UNA MESA</h1>
-        <h3>Avenida de los Arrayanes, 15, 18001 Granada, España</h3>
+        <h1>LA HISTORIA DE CASA DI PEPE</h1>
       </article>  
     </section>
     
