--- a/Fuente/html/cuenta.html
+++ b/Fuente/html/cuenta.html
@@ -32,7 +32,7 @@
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
         <li><a href="carta.html"> CARTA </a> </li>
-        <li><a href="#"> TIENDA </a> </li>
+        <li><a href="tienda.html"> TIENDA </a> </li>
         <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
@@ -51,6 +51,7 @@
 
   <main>
 
+    <!-- Contenedor de todo la cuenta -->
     <section class="contenedor-cuenta">
         <aside class="seccion-cuenta">
             <i class="fa-regular fa-user"></i>
@@ -64,6 +65,7 @@
             </nav>
         </aside>
 
+        <!-- Contenedor del apartado del perfil -->
         <article class="contenedor-perfil">
             <h1>PERFIL</h1>
             <h3>Editar información personal y preferencias</h3>
