--- a/Fuente/html/sobre-nosotros.html
+++ b/Fuente/html/sobre-nosotros.html
@@ -33,7 +33,7 @@
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
         <li><a href="carta.html"> CARTA </a> </li>
-        <li><a href="#"> TIENDA </a> </li>
+        <li><a href="tienda.html"> TIENDA </a> </li>
         <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
@@ -62,6 +62,7 @@
     
     <!-- Contenedor Filosofias -->
     <section class="contenedor-filosofias">
+      <!-- Filosofia - Autenticidad -->
         <article class="filosofia">
             <figure id="contenedor-img" data-info='["decorativa-SobreNosotros-Autenticidad", "img-decorativa", "1"]'>
                 <picture>
@@ -75,7 +76,8 @@
             <p>Casa di Pepe se compromete a ofrecer una experiencia culinaria fiel a las raíces toscanas.</p>
         </article>
 
-        <article class="filosofia">
+      <!-- Filosofia - Calidad -->
+      <article class="filosofia">
             <figure id="contenedor-img" data-info='["decorativa-SobreNosotros-Calidad", "img-decorativa", "1"]'>
                 <picture>
                   <source id="sourceWebp" type="image/webp">
@@ -88,7 +90,8 @@
             <p>Sólo se utilizan ingredientes frescos y de la más alta calidad de la cocina de la Toscana.</p>
         </article>
 
-        <article class="filosofia">
+      <!-- Filosofia - Pasion -->
+      <article class="filosofia">
             <figure id="contenedor-img" data-info='["decorativa-SobreNosotros-Pasion", "img-decorativa", "1"]'>
                 <picture>
                   <source id="sourceWebp" type="image/webp">
@@ -101,7 +104,8 @@
             <p>Todos los empleados de Casa di Pepe comparten una pasión común por la cocina italiana.</p>
         </article>
 
-        <article class="filosofia">
+      <!-- Filosofia - Hospitalidad -->
+      <article class="filosofia">
             <figure id="contenedor-img" data-info='["decorativa-SobreNosotros-Hospitalidad", "img-decorativa", "1"]'>
                 <picture>
                   <source id="sourceWebp" type="image/webp">
@@ -115,6 +119,7 @@
         </article>
     </section>
 
+    <!-- Contenedor de la Historia (Imagen + Texto) -->
     <section class="contenedor-historia">
         <figure id="contenedor-img" data-info='["decorativa-SobreNosotros", "img-decorativa", "1"]'>
             <picture>
