--- a/Fuente/html/carta/pasta.html
+++ b/Fuente/html/carta/pasta.html
@@ -32,7 +32,7 @@
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
         <li><a href="../carta.html"> CARTA </a> </li>
-        <li><a href="#"> TIENDA </a> </li>
+        <li><a href="../tienda.html"> TIENDA </a> </li>
         <li><a href="../formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
