--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
         <li><a href="Fuente/html/carta.html"> CARTA </a> </li>
-        <li><a href="#"> TIENDA </a> </li>
+        <li><a href="Fuente/html/tienda.html"> TIENDA </a> </li>
         <li><a href="Fuente/html/formulario-reserva.html"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
       </ul>
