Todos menos Parcel

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         <li><a href="Fuente/html/carta.html"> CARTA </a> </li>
         <li><a href="Fuente/html/tienda.html"> TIENDA </a> </li>
         <li><a href="Fuente/html/formulario-reserva.html"> RESERVAR MESA </a> </li>
-        <li><a href="#"> HACER PEDIDO </a> </li>
+        <li><a href="https://glovoapp.com/es/es/granada/"> HACER PEDIDO </a> </li>
       </ul>
 
       <!-- Menú Desplegable, que aparece en pantallas más pequeñas -->
-      <button class="menu-desplegable" id="menu-desp">
-        ☰
-      </button>
+      <i class="fa-solid fa-bars menu-desplegable" id="menu-desp"></i>
       
       <!-- Boton de Inicio de Sesion -->
       <a href="Fuente/html/inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
@@ -59,8 +57,8 @@
         <h3>EL CORAZÓN DE LA TOSCANA</h3>
       </article>  
       <nav class="intro-botones">
-        <a href="#" class="boton-pred">LLamanos</a>
-        <a href="#" class="boton-pred">Escribenos</a>
+        <a href="tel:123123123" class="boton-pred">LLamanos</a>
+        <a href="mailto:casadipepe@gmail.com" class="boton-pred">Escribenos</a>
       </nav>
     </section>
 
@@ -177,19 +175,19 @@
         <a class="boton-footer" >¡Síguenos en redes sociales!</a>
         
         <nav class="img-redes">
-          <a href="#" target="_blank">
+          <a href="https://www.tiktok.com/es/" target="_blank">
             <i class="fab fa-tiktok"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.youtube.com/" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank">
             <i class="fab fa-facebook"></i>
           </a>
         </nav>
