--- a/Fuente/html/carta.html
+++ b/Fuente/html/carta.html
@@ -34,7 +34,7 @@
         <li><a href="carta.html"> CARTA </a> </li>
         <li><a href="tienda.html"> TIENDA </a> </li>
         <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
-        <li><a href="#"> HACER PEDIDO </a> </li>
+        <li><a href="https://glovoapp.com/es/es/granada/"> HACER PEDIDO </a> </li>
       </ul>
 
       <!-- Menú Desplegable, que aparece en pantallas más pequeñas -->
@@ -159,19 +159,19 @@
         <a class="boton-footer" >¡Síguenos en redes sociales!</a>
         
         <nav class="img-redes">
-          <a href="#" target="_blank">
+          <a href="https://www.tiktok.com/es/" target="_blank">
             <i class="fab fa-tiktok"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.youtube.com/" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank">
             <i class="fab fa-facebook"></i>
           </a>
         </nav>
