--- a/Fuente/html/formulario-registro.html
+++ b/Fuente/html/formulario-registro.html
@@ -34,13 +34,11 @@
         <li><a href="carta.html"> CARTA </a> </li>
         <li><a href="tienda.html"> TIENDA </a> </li>
         <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
-        <li><a href="#"> HACER PEDIDO </a> </li>
+        <li><a href="https://glovoapp.com/es/es/granada/"> HACER PEDIDO </a> </li>
       </ul>
 
       <!-- Menú Desplegable, que aparece en pantallas más pequeñas -->
-      <button class="menu-desplegable" id="menu-desp">
-        ☰
-      </button>
+      <i class="fa-solid fa-bars menu-desplegable" id="menu-desp"></i>
       
       <!-- Boton de Inicio de Sesion -->
       <a href="inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
@@ -54,7 +52,7 @@
     <section class="contenedor-formulario">
         <h1>FORMULARIO DE REGISTRO</h1>
 
-        <form class="inicio-formulario" action="" method="POST">
+        <form class="inicio-formulario" method="POST">
             <section class="formulario-doble">
                 <label for="nombreUser">Nombre
                     <input type="text" id="nombreUser" name="nombreUser" placeholder="Escribe tu nombre" required>
@@ -146,19 +144,19 @@
         <a class="boton-footer" >¡Síguenos en redes sociales!</a>
         
         <nav class="img-redes">
-          <a href="#" target="_blank">
+          <a href="https://www.tiktok.com/es/" target="_blank">
             <i class="fab fa-tiktok"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.youtube.com/" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank">
             <i class="fab fa-facebook"></i>
           </a>
         </nav>
