--- a/Fuente/html/sobre-nosotros.html
+++ b/Fuente/html/sobre-nosotros.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="../styles/css/sobre-nosotros.css">
   <script src="../scripts/js/menu-desplegable.js" defer></script>
   <script src="../scripts/js/img-adaptables.js" defer></script>
-  <script src="../scripts/js/generar-calendario.js" defer></script>
   <title>Casa di Pepe</title>
 </head>
 
@@ -35,13 +34,11 @@
         <li><a href="carta.html"> CARTA </a> </li>
         <li><a href="tienda.html"> TIENDA </a> </li>
         <li><a href="formulario-reserva.html"> RESERVAR MESA </a> </li>
-        <li><a href="#"> HACER PEDIDO </a> </li>
+        <li><a href="https://glovoapp.com/es/es/granada/"> HACER PEDIDO </a> </li>
       </ul>
 
       <!-- Menú Desplegable, que aparece en pantallas más pequeñas -->
-      <button class="menu-desplegable" id="menu-desp">
-        ☰
-      </button>
+      <i class="fa-solid fa-bars menu-desplegable" id="menu-desp"></i>
       
       <!-- Boton de Inicio de Sesion -->
       <a href="inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
@@ -171,19 +168,19 @@
         <a class="boton-footer" >¡Síguenos en redes sociales!</a>
         
         <nav class="img-redes">
-          <a href="#" target="_blank">
+          <a href="https://www.tiktok.com/es/" target="_blank">
             <i class="fab fa-tiktok"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.youtube.com/" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
 
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank">
             <i class="fab fa-facebook"></i>
           </a>
         </nav>
