Proyecto - Casa Di Pepe

--- a/Fuente/html/formulario-reserva.html
+++ b/Fuente/html/formulario-reserva.html
@@ -66,9 +66,9 @@
         <form class="inicio-formulario" method="POST">
         
             <section class="calendar-butones">
-                <button id="antMes"> < </button>
-                <article id="mesYear"></article>
-                <button id="sigMes"> > </button>
+                <i class="fa-solid fa-chevron-left antMes" id="antMes"></i>
+                <article class="mesYear" id="mesYear"></article>
+                <i class="fa-solid fa-chevron-right sigMes" id="sigMes"></i>
             </section>
             
             <section id="calendar"></section>
