--- a/Fuente/html/tienda.html
+++ b/Fuente/html/tienda.html
@@ -39,9 +39,7 @@
       </ul>
 
       <!-- Menú Desplegable, que aparece en pantallas más pequeñas -->
-      <button class="menu-desplegable" id="menu-desp">
-        ☰
-      </button>
+      <i class="fa-solid fa-bars menu-desplegable" id="menu-desp"></i>
       
       <!-- Boton de Inicio de Sesion -->
       <a href="inicio-sesion.html" class="boton-inicio separado">Inicio de sesion</a> 
