Cambios Accesibilidad - Footer Redes Img

--- a/Fuente/html/cuenta.html
+++ b/Fuente/html/cuenta.html
@@ -117,20 +117,20 @@
         <a class="boton-footer" >¡Síguenos en redes sociales!</a>
         
         <nav class="img-redes">
-          <a href="https://www.tiktok.com/es/" target="_blank">
-            <i class="fab fa-tiktok"></i>
+          <a href="https://www.tiktok.com/es/" target="_blank" aria-label="TikTok">
+            <i class="fab fa-tiktok" aria-hidden="true"></i>
           </a>
 
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="fab fa-instagram"></i>
+          <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
 
-          <a href="https://www.youtube.com/" target="_blank">
-            <i class="fab fa-youtube"></i>
+          <a href="https://www.youtube.com/" target="_blank" aria-label="YouTube">
+            <i class="fab fa-youtube" aria-hidden="true"></i>
           </a>
 
-          <a href="https://www.facebook.com/" target="_blank">
-            <i class="fab fa-facebook"></i>
+          <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
+            <i class="fab fa-facebook" aria-hidden="true"></i>
           </a>
         </nav>
       </section>
